# color_detect

./: CMakeLists.txt  README.md  package.xml
config/: color_detect_config.yaml
inc/color_detect/: beacon_config.hpp  beacon_detector.hpp  beacon_fusion.hpp  beacon_protocol.hpp  color_classifier.hpp  state_machine.hpp
launch/: color_detect.launch.py  color_detect_all.launch.py
scripts/: startup.sh
src/color_detect/: beacon_detector.cpp  beacon_fusion.cpp  beacon_protocol.cpp  color_classifier.cpp  color_detect_node.cpp  color_detect_standalone.cpp  serial_bridge_node.cpp
src/color_detect/core/: beacon_detector.cpp  beacon_fusion.cpp  beacon_protocol.cpp  color_classifier.cpp  state_machine.cpp
src/color_detect/nodes/: color_detect_node.cpp  serial_bridge_node.cpp
