<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>color_detect</name>
  <version>1.0.0</version>
  <description>
    Single light-strip pipeline: one low-exposure camera, OpenCV detection,
    and serial transmission.
  </description>
  <maintainer email="user@example.com">robot_team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
